# loft

./: .gitignore  CMakeLists.txt  MainTest  Makefile  README.md  imgui.ini
docs/: Docs.typ
examples/viewer/: CMakeLists.txt  README.md
examples/viewer/shaders/: Bloom.frag  Bloom.frag.spirv  Composite.frag  Composite.frag.spirv  Makefile  Offscreen.vert  Offscreen.vert.spirv  Opaque.frag  Opaque.frag.spirv  Opaque.vert  Opaque.vert.spirv  ParticleDraw.frag  ParticleDraw.frag.spirv  ParticleDraw.vert  ParticleDraw.vert.spirv  Particles.comp  Particles.comp.spirv  Shading.frag  Shading.frag.spirv  Shadow.frag  Shadow.frag.spirv  Shadow.vert  Shadow.vert.spirv  Transparent.frag  Transparent.frag.spirv  Upsample.frag  Upsample.frag.spirv
examples/viewer/src/: ShaderManager.cpp  ShaderManager.hpp  main.cpp  main2.cpp
examples/viewer/src/editor/: Editor.cpp  Editor.h  SceneTree.cpp  SceneTree.h
examples/viewer/src/io/: SceneLoader.hpp  gltfSceneLoader.cpp  gltfSceneLoader.hpp  path.cpp  path.hpp
examples/viewer/src/mesh/: DrawMeshInfo.hpp  Drawable.hpp  MaterialBuffer.cpp  MaterialBuffer.h  MeshBuffer.cpp  MeshBuffer.h  SceneBuffer.cpp  SceneBuffer.hpp  SceneData.cpp  SceneData.hpp  SceneTree.cpp  SceneTree.h  TextureStorage.cpp  TextureStorage.h  Transform.hpp  TransformBuffer.cpp  TransformBuffer.hpp  Vertex.hpp
examples/viewer/src/mesh/data/: MaterialData.h  SceneData.hpp  TextureData.h
examples/viewer/src/mesh/runtime/: Material.h  Scene.cpp  Scene.h  Texture.h
examples/viewer/src/runtime/: Camera.cpp  Camera.h  FrameLock.cpp  FrameLock.h
examples/viewer/src/scene/: Light.cpp  Light.h  Material.h  Scene.cpp  Scene.h
modules/: CMakeLists.txt
modules/base/: CMakeLists.txt  Makefile
modules/base/include/: DebugUtils.h  FramebufferBuilder.hpp  Gpu.hpp  GpuScheduler.h  Instance.hpp  Recording.hpp  RenderContext.hpp  RenderPassLayout.hpp  SamplerBuilder.hpp  TransferTaskPipeline.hpp  props.hpp  result.hpp
modules/base/include/debug/: Debug.hpp  DebugUtils.h  MockGpu.hpp
modules/base/include/io/: ShaderBinary.h  file.hpp
modules/base/include/resources/: Buffer.hpp  BufferBusWriter.h  DefaultAllocator.h  GpuAllocation.h  GpuAllocator.h  Image.hpp  ImageBusWriter.h  ImageView.hpp  MipmapGenerator.h
modules/base/include/shaders/: BlendingInfo.h  ComputePipelineBuilder.hpp  GlslShaderBuilder.hpp  Pipeline.hpp  PipelineBuilder.h  SamplerBuilder.hpp  Shader.hpp  ShaderBuilder.hpp  ShaderInputSet.h  ShaderInputSetLayoutBuilder.hpp  SpirvShaderBuilder.hpp  VertexAttribute.h  VertexBinding.h
modules/base/src/: DebugUtils.cpp  FramebufferBuilder.cpp  Gpu.cpp  Instance.cpp  Recording.cpp
modules/base/src/io/: file.cpp
modules/base/src/resources/: Buffer.cpp  BufferBusWriter.cpp  DefaultAllocator.cpp  Image.cpp  ImageBusWriter.cpp  ImageView.cpp  MipmapGenerator.cpp
modules/base/src/shaders/: ComputePipelineBuilder.cpp  GlslShaderBuilder.cpp  Pipeline.cpp  PipelineBuilder.cpp  SpirvShaderBuilder.cpp
modules/common/: CMakeLists.txt
modules/common/src/: AdjacencyMatrix.cpp  AdjacencyMatrix.hpp  Assert.h  Display.h  common.h  error.h  func.h  log.h  result.h
modules/frame_graph/: CMakeLists.txt
modules/frame_graph/include/: AdjacencyMatrix.h  GraphVizVisualizer.h  ImageChain.h  RecordingDependency.h  RenderGraph.hpp  RenderGraphBuilder.h  RenderGraphBuilderCache.h  RenderGraphNode.h  RenderGraphScheduler.h  RenderPass.hpp  RenderPassBuildInfo.hpp  Resource.h  ResourceBuffer.hpp  ResourceLayout.hpp  ResourceType.h
modules/frame_graph/src/: AdjacencyMatrix.cpp  GraphVizVisualizer.cpp  RenderGraph.cpp  RenderGraphBuilder.cpp  RenderGraphNode.cpp  RenderPassBuildInfo.cpp
modules/frame_graph/tests/: CMakeLists.txt
modules/frame_graph2/: CMakeLists.txt
modules/frame_graph2/include/: FrameGraph.h  FrameGraphBuilder.h  FrameGraphResources.h  RenderGraph.h
modules/frame_graph2/src/: FrameGraph.cpp  FrameGraphBuilder.cpp  RenderGraph.cpp
modules/frame_graph2/tests/: CMakeLists.txt  MainTest.cpp
modules/render_graph/: CMakeLists.txt
modules/render_graph/include/: DependencyGraph.hpp  ImageChain.hpp  RenderGraph.hpp  RenderGraphAllocator.hpp  RenderGraphBuffer.hpp  RenderGraphBuilder.hpp  RenderGraphVulkanRuntime.hpp  RenderPass.hpp  Resource.hpp  Task.hpp
modules/render_graph/src/: RenderGraph.cpp  RenderGraphAllocator.cpp  RenderGraphBuffer.cpp  RenderGraphBuilder.2cpp  RenderGraphBuilder.cpp  RenderGraphVulkanRuntime.2cpp
modules/render_graph/tests/: CMakeLists.txt  DependencyGraphTests.cpp  Mock.hpp  RenderGraphBuilderTests.cpp  TopologicalSortTests.cpp
modules/window/: CMakeLists.txt
modules/window/include/: SDLWindow.h  Surface.hpp  Swapchain.hpp  Window.hpp  cursors.h  event.h  input.h  keys.h  window.h
modules/window/src/: SDLWindow.cpp  Swapchain.cpp  x11window.c
volk/: CMakeLists.txt
